Added max width to car

--- a/src/scss/card+input.scss
+++ b/src/scss/card+input.scss
@@ -11,6 +11,9 @@
   border-radius: var(--size-radius);
   border: 3px solid var(--color-shadow, currentColor);
   box-shadow: .5rem .5rem 0 var(--color-shadow, currentColor);
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
   
   *:first-child {
     margin-top: 0;
